@@ -2,6 +2,7 @@
 
     * Don't emit (unset) or (not a symlink) on stderr (#549498)
     * Fix mkdir die message in java-vm module
+    * Sort java-vm targets in version order rather than alphanumeric
 
 0.3.0:
 
